// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepareDictionariesForCsv > List of dictionaries example 1`] = `
[
  {
    "glottocode": "Glottocode",
    "iso6393": "ISO 639-3",
    "latitude": "Latitude",
    "location": "Location",
    "longitude": "Longitude",
    "name": "Dictionary Name",
    "public": "Public",
    "thumbnail": "Thumbnail",
    "url": "URL",
  },
  {
    "glottocode": "badh1238",
    "iso6393": "",
    "latitude": "30.133",
    "location": "",
    "longitude": "79.539",
    "name": "<xaxdeleted>",
    "public": "false",
    "thumbnail": undefined,
    "url": "https://livingdictionaries.app/badhani/entries/list",
  },
  {
    "glottocode": "buri1258",
    "iso6393": "bua",
    "latitude": "51.833",
    "location": "",
    "longitude": "107.616",
    "name": "Buryat",
    "public": "false",
    "thumbnail": undefined,
    "url": "https://livingdictionaries.app/buryat/entries/list",
  },
  {
    "glottocode": undefined,
    "iso6393": undefined,
    "latitude": undefined,
    "location": "South Eastern States of Nigeria_ West Africa",
    "longitude": undefined,
    "name": " IGBO LANGUAGE (ASUSU IGBO)",
    "public": "false",
    "thumbnail": undefined,
    "url": "https://livingdictionaries.app/igbo-language-(asusu-igb/entries/list",
  },
]
`;

exports[`prepareDictionariesForCsv > admin/dictionaries example 1`] = `
[
  {
    "alternate_names": "Alternate Names",
    "alternate_orthographies": "Alternate Orthographies",
    "author_connection": "Author Connection",
    "community_permission": "Community Permission",
    "conlang_description": "Conlang Description",
    "created_at": "Created At",
    "entries": "No. Entries",
    "gloss_languages": "Gloss Languages",
    "glottocode": "Glottocode",
    "iso6393": "ISO 639-3",
    "language_used_by_community": "Language Used By Community",
    "latitude": "Latitude",
    "location": "Location",
    "longitude": "Longitude",
    "name": "Dictionary Name",
    "public": "Public",
    "thumbnail": "Thumbnail",
    "url": "URL",
    "video_access": "Video Access",
  },
  {
    "alternate_names": "",
    "alternate_orthographies": undefined,
    "author_connection": undefined,
    "community_permission": undefined,
    "conlang_description": undefined,
    "created_at": "Mon Nov 21 2022",
    "entries": "0",
    "gloss_languages": "en, hi, pa",
    "glottocode": "badh1238",
    "iso6393": "",
    "language_used_by_community": undefined,
    "latitude": "30.133",
    "location": "",
    "longitude": "79.539",
    "name": "<xaxdeleted>",
    "public": "false",
    "thumbnail": undefined,
    "url": "https://livingdictionaries.app/badhani/entries/list",
    "video_access": undefined,
  },
  {
    "alternate_names": "Buriat, Buriad, Bargu",
    "alternate_orthographies": undefined,
    "author_connection": undefined,
    "community_permission": undefined,
    "conlang_description": undefined,
    "created_at": "",
    "entries": "1",
    "gloss_languages": "en, ru, mn, cmn",
    "glottocode": "buri1258",
    "iso6393": "bua",
    "language_used_by_community": undefined,
    "latitude": "51.833",
    "location": "",
    "longitude": "107.616",
    "name": "Buryat",
    "public": "false",
    "thumbnail": undefined,
    "url": "https://livingdictionaries.app/buryat/entries/list",
    "video_access": undefined,
  },
  {
    "alternate_names": undefined,
    "alternate_orthographies": undefined,
    "author_connection": undefined,
    "community_permission": undefined,
    "conlang_description": undefined,
    "created_at": "",
    "entries": "1",
    "gloss_languages": "ig",
    "glottocode": undefined,
    "iso6393": undefined,
    "language_used_by_community": undefined,
    "latitude": undefined,
    "location": "South Eastern States of Nigeria_ West Africa",
    "longitude": undefined,
    "name": " IGBO LANGUAGE (ASUSU IGBO)",
    "public": "false",
    "thumbnail": undefined,
    "url": "https://livingdictionaries.app/igbo-language-(asusu-igb/entries/list",
    "video_access": undefined,
  },
]
`;
